<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/black"
    tools:context=".MainActivity">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardHeader"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/bg_linea">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bg_2"
            android:contentDescription="@string/banner"
            android:scaleType="fitXY" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:cardCornerRadius="200dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:background="@color/white"
                    android:contentDescription="@string/logo"
                    android:src="@drawable/user_icon"/>
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginStart="16dp"
        android:layout_below="@+id/cardHeader">

        <TextView
            android:id="@+id/txMateria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/materia"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etMateria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/black"
            android:maxLines="1"
            android:hint="@string/ingrese_el_nombre_de_la_materia"
            android:textColorHint="@color/white"
            android:textAlignment="center"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/txMateria" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardHT"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:cardBackgroundColor="@color/bg_4"
            app:cardCornerRadius="16dp"
            app:layout_constraintEnd_toStartOf="@+id/cardHP"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etMateria">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/horas_teoricas"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tvHorasTeorica"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    tools:text="2" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/buttonHTRemove"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/bg_3"
                        android:src="@drawable/ic_remove"
                        app:borderWidth="0dp"
                        app:tint="@color/white" />

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/buttonHTAdd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:backgroundTint="@color/bg_3"
                        android:src="@drawable/ic_add"
                        android:tintMode="src_in"
                        app:borderWidth="0dp"
                        app:tint="@color/white" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardHP"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:cardBackgroundColor="@color/bg_4"
            app:cardCornerRadius="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cardHT"
            app:layout_constraintTop_toBottomOf="@+id/etMateria">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/horas_practicas"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tvHorasPractica"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    tools:text="2" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/buttonHPRemove"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/bg_3"
                        android:src="@drawable/ic_remove"
                        app:borderWidth="0dp"
                        app:tint="@color/white" />

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/buttonHPAdd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:backgroundTint="@color/bg_3"
                        android:src="@drawable/ic_add"
                        app:borderWidth="0dp"
                        app:tint="@color/white" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvCC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/cr_ditos"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardHP" />

        <EditText
            android:id="@+id/etCreditos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:importantForAutofill="no"
            android:inputType="number"
            android:hint="@string/ingrese_n_mero_de_cr_ditos"
            android:textColorHint="@color/white"
            android:textAlignment="center"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCC" />

        <Button
            android:id="@+id/btnCalcular"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/bg_2"
            android:text="@string/calcular"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etCreditos" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>